--- a/config.js.example
+++ b/config.js.example
@@ -1,10 +1,24 @@
-APP_PORT = 3000
-APP_HOST = "localhost"
+const app={
+    APP_PORT : 3000 ,
+    APP_HOST : "localhost"
+}
 
 
 
-DB_HOST = '127.0.0.1'
-DB_PORT = 3360
-DB_DATABASE =''
-DB_USERNAME = ''
-DB_PASSWORD = ''
+const db = {
+  DB_HOST: '127.0.0.1',
+  DB_PORT: 3360,
+  DB_DATABASE: '',
+  DB_USERNAME: '',
+  DB_PASSWORD: '',
+  DB_WAITFORCONNECTIONS: true,
+  DB_CONNECTIONLIMIT:10,
+  DB_QUEUE:0
+};
+
+
+
+module.exports ={
+    app,
+    db
+}
