--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.3",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
